Ativacao dos botoes da main

--- a/templates/index.html
+++ b/templates/index.html
@@ -21,8 +21,8 @@
             
           
             <div class="main-button">
-                <button>Cadastrar</button>
-                <button>Login</button>    
+                <button id="cadastrar_Usuario" onclick="window.location.href = 'create-user'">Cadastrar</button>
+                <button id="fazer_login" onclick="window.location.href = 'login'">Login</button>    
             </div>
         </div>
     </main>
