Ativacao do link do cabecalho

--- a/templates/template.html
+++ b/templates/template.html
@@ -12,7 +12,7 @@
             <h2 class="header-name">{{titulo_header}}</h2>
             <div class="header-links">
                 <a href="/" class="links">Início</a>
-                <a href="#" class="links">Cadastro</a>
+                <a href="create-user" class="links">Cadastro</a>
                 <a href="login" class="links">Login</a>
                 <a href="logout" class="links">Logout</a>
             </div>
