--- a/static/css/style.css
+++ b/static/css/style.css
@@ -86,7 +86,7 @@ button:hover {
     border: 1px solid #85847e;
     background-color: #85847e;
 }
-.flash-sucess {
+.flash-success {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color:rgb(22, 77, 17);
     background-color:#7aa774;
