--- a/static/css/style.css
+++ b/static/css/style.css
@@ -7,6 +7,7 @@ body {
     color: #353130;
     box-sizing: border-box;
     background-color: #cbcfb4;
+    /* background-color: #a8a9d4 */
 }
 
 .header-content {
@@ -105,6 +106,55 @@ button:hover {
     margin-left: 20px;
     margin-right: 20px;
     border-radius: 4px;
+}
+.main-create-login {
+    align-items:center;
+    padding: 10px;
+    margin: 100px;
+    margin-left: 400px;
+    margin-right: 400px;
+    text-align: justify;
+    
+}
+.form-cadastrar-login{
+    background-color:#85847e;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    /* color:rgb(0, 0, 0); */
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 10%;
+    border-radius: 5px;
+    
+}
+.input-form {
+    border-radius: 2px;
+    border: #e7e6e6;
+    padding: 5px;
+    /* margin-right: 5px; */
+}
+.select-role {
+    margin-left:5px;
+    margin-right:40px
+}
+.select-role-main {
+    display: flex;
+    margin-top: 20px;
+}
+#name ,#password{
+    padding: 5px;
+}
+.btn-form {
+    border: 1px solid rgb(64, 83, 77);
+    padding: 8px 24px;
+    border-radius: 4px;
+    color: #e7e6e6;
+    background-color:#353130;
+    margin-top: 10%;
+    margin-left: 30%;
+    margin-right: 30%;
+    margin-bottom: 10%;
+    transition: background-color 0.8s;
 }
 .footer{
     display: flex;
