--- a/templates/createUsers.html
+++ b/templates/createUsers.html
@@ -1,11 +1,19 @@
 {% extends "template.html" %}
 {% block conteudo %}
-<div class = 'main-create-user'>
-    <form action="/create-user" method="post">
-        Nome completo:<input type="text" name="name">
-        Senha: <input type="password" name="password">
-        Tipo: <input type="tipo" name="role">
-        <button type="submit">Cadastrar</button>
+<div class = 'main-create-login'>
+    <form action="/create-user" method="post" class="form-cadastrar-login">
+        Nome completo: <input type="text" name="name" class="input-form">
+        Senha: <input type="password" name="password" class="input-form">
+        <!-- Tipo: <input type="tipo" name="role" class="input-form"> -->
+        <div class="select-role-main">
+            Tipo: <select name="select" class="select-role">
+                <option value="estudante">Estudante</option>
+                <option value="professor">Professor</option>
+                <option value="coordenador">Coordenador</option>
+          </select>
+        </div>
+
+        <button type="submit" class="btn-form">Cadastrar</button>
     </form>
 
 </div>
