--- a/templates/login.html
+++ b/templates/login.html
@@ -1,14 +1,21 @@
 {% extends "template.html" %}
 {% block conteudo %}
-
-<form action="{{ url_for('auth') }}" method="post">
-    <input type="hidden" name="next" value="{{next or '/'}}">
-    <label for="name">
-        Name: <input type="text" id="name" name="user_name">
-    </label>
-    <label for="password">
+<div class = 'main-create-login'>
+    <form action="{{ url_for('auth') }}" method="post" class="form-cadastrar-login">
+        <input type="hidden" name="next" value="{{next or '/'}}">
+        Nome:  <input type="text" id="name" name="user_name">
         Senha: <input type="password" id="password" name="password">
-    </label>
-    <button type="submit"> Login </button>
-</form>
+        <button type="submit" class="btn-form"> Login </button>
+    </form>
+</div>
 {% endblock %}
+
+
+<!-- <div class = 'main-login'>
+    <form action="{{ url_for('auth') }}" method="post" class="form-login">
+        <input type="hidden" name="next" value="{{next or '/'}}">
+        Nome:  <input type="text" id="name" name="user_name">
+        Senha: <input type="password" id="password" name="password">
+        <button type="submit" class="btn-login"> Login </button>
+    </form>
+</div> -->
